@@ -5,19 +5,29 @@ DIST xz-5.0.5.tar.gz 1305685 SHA256 5dcffe6a3726d23d1711a65288de2e215b4960da5092
 DIST xz-5.0.7.tar.gz 1317771 SHA256 f4d2165553b9d0d82fd08bc2eacddeb48ebeb862a5686a603f8c044a2e52c93f SHA512 dc2716c2a5d8c8cec0e7034c5dbb8d745196f4e6c8344d5ff164e20fc284d703a93a75d8a062215a2c613f19152d6b996807baf5b7c0e7ff20a5b865d6466ed8 WHIRLPOOL b9b1ce8c1374211e56f0b5a70d35e3ce6e3431d4ddfd45f01f97f44c932b3b372d7b9314d2d024ac51d8e3dd3c997ccedde366cee68a3d5e2dac6d61d7a7d681
 DIST xz-5.0.8.tar.gz 1329117 SHA256 cac71b31ed322a487f1da1f10dfcf47f8855f97ff2c23b92680c7ae7be58babb SHA512 402079001c280e0e957d666da724158b134fd0b17320c4c387413dd2cc88400ea0a7f88819e06de3b35d864f51cb3e3a50495265382cabd6c1080920b4c70847 WHIRLPOOL d8a5748ef85000e81d535a98448fbf4198c59da7183fa8e25d5311b0e122f8b9342d706fceb1a6151a1b40a2a4bc264d4e799c65a89dd5ed80d1fbebf29e5049
 DIST xz-5.2.0.tar.gz 1445562 SHA256 231ef369982240bb20ed7cffa52bb12a4a297ce6871f480ab85e8a7ba98bf3d6 SHA512 dc272d4f8d437bfe22ed75355fcd647018a2514e4b011552c913074c0ae7d306ae2a20f3227895ea8123918088d826b2c5595dc15ba6ba2d8062e780d8707a28 WHIRLPOOL a629c42215c5c8ee366d757a4a08ecf9773aea3422f8c51cf8dffcb74edaab4fa3f760a7a3c11e85564b3a2d6154e06f9a76afc460c1120406539233254caa9e
+DIST xz-5.2.1.tar.gz 1454491 SHA256 b918b6648076e74f8d7ae19db5ee663df800049e187259faf5eb997a7b974681 SHA512 61d059c51c7cdbab803d006ee47b0be116fd6ba4ba05b9234c43c8b1d8b0021b44735c1335a911a4bccb8543548563cef16dafd7d76dd8ef6c4f763fc023afc2 WHIRLPOOL d4d90f7230c0880c1c392a2767c398510a69e24c18f5c5947472e108902aebb6e94aad0245f16720c60729a7a50199fb4250ae3f6801a0cc25086e7858c55d19
 EBUILD xz-utils-5.0.5-r1.ebuild 2225 SHA256 2f7efe22ae832e69793b70e7bb3f8ee588a0c4d67c5c19fdd9c72a4a39710dfb SHA512 57d0682efd6ed9e3167794ff95bf962cad4b0fe467e9c7eb6c1bea1b361ad3bc360243fd4f5b05e0b59008db7d79fc07a22dba9291d2dedca0795c44a282061b WHIRLPOOL 8e29f55108fa29d27cba1e602dc72c6fda068713654039080e21c945426d20f29a2cc9be6e7dff6d35b3e627a256422d8da5865f795c881ef1706012372ed90d
 EBUILD xz-utils-5.0.7.ebuild 2240 SHA256 53e958f3900a7611cad407533ef56a52f2412f20a3cbbe49197fa89322b9e1f2 SHA512 28048b5fdcd5ba20c82567c3c7b1e26af9dada5ac88dec844e806be5a15b65b11209f62ee0134f1ebd7c5ea5b30afaeb018f29af6a54e0218a64213078db23b6 WHIRLPOOL 7aa6d4cafecb85a28f84c07c104b29f95550dd533b3d663c66fb21357c3218d2d8997ff50055063661dcb9bd465fb46bc025e416da204c150ea383c8c906fc35
 EBUILD xz-utils-5.0.8.ebuild 2227 SHA256 7881b9b2362a8477edfbbefb59c43fa76b0a7a74bfab2829d09c9983568b1691 SHA512 c797c2368c17b998d6d5ce0dec4ec699c10d56f1dc32eaccc0be454850b3d664f40ea17abe234599dbeb3e7cd84e8acfe06e819f2c981d76ffb815c14a41d7e5 WHIRLPOOL 00ee175006781a4865f45537492dfa526c06c7dd940fdb68fb31fc8b38be89d3f12c58153f828e5d41829ed41cc16cdaee98a7938140f67f71aac341efd94d7c
 EBUILD xz-utils-5.2.0.ebuild 2235 SHA256 727c60f669c7cdffb13010320a1713e525bc5747024bcbda7662d459990e54ad SHA512 d6cbd6d8025ae600ebbcef69d3dbbb87566641f45ac012de9d63ddfc51b1dfbe08781dfb4967dfad3e71b37ddc0ec05b5bb407a3e5ae2bd22bdba8ce788ceee3 WHIRLPOOL c7c19972b68501835e3105a47523afdbead2e980180408e1d7b786e46ad7e39f595fea61815dce0393a7a08df890cbcddf3a7f12a49d9659fd1f1297bdc57730
+EBUILD xz-utils-5.2.1.ebuild 2234 SHA256 8a775859eb7f6ced2a3011750123efc1d64029edf7371036057eba0b3c6b1ccc SHA512 8b880fb8e03e248c39c0894f17d85715dcbf6b2af337cefab750d3743c09481aedf1d684627869da666b6d35424e7b31fe591f3341873e57684161987ca3ac2f WHIRLPOOL 7ddd5ddbabd8f4826b7760457ad731dc36d03fa835811dd0d9698e234f90f13d8c268fbd8a4023c0b67223067666ab4d839d288ea71cc435a3e0b931e4c7af23
 EBUILD xz-utils-9999.ebuild 2223 SHA256 d6b74dd0e53cf54c18b69f36e3f8444e7a03ca5e15293e87bd5c9b7d0fc1de71 SHA512 8fe2d7cee8fc4cc96451fd593df297b483183bbcc8e57c9a4e5449ce155d8639649e8e88b6361cde3c597d686266a7fc1e17b2bbc8c239e6645f2eef9033e8d2 WHIRLPOOL e034eb487b0d5675a9c7e22f5b405cd3b147b23008fd520534a97273b31d65c70fc08b2f87d8c831f6653dce0102c3ee1db180266d232a2cd7f57171515a9c6f
-MISC ChangeLog 12462 SHA256 09ebb59a5a04b4b6295e2f4658485f85a92f772fb2548870c2ddbeae23b2dab3 SHA512 412e6db2b08f661ec9b911ea478a0558d37dfa67a405464f90debf2519eaa40656b92438c9a69337eccc35884f4f7cc02bfb6a1ea37316927fd893e46ac87c69 WHIRLPOOL 18673ba6200bd2d8440a3b36edb58eeb51ffd0f802f4df8e002b58ec50c692db4d69d3818c7e064aa3494164b1fa12d256080f56827509165c0751cf07fa57b2
+MISC ChangeLog 12583 SHA256 8bcfc65489a8ac8fab490689aab0afb10461695c8e5b5915a2e513485eb6aa67 SHA512 d827ca11c96773046cfbcf322c9076df56f95acdea2dec0e544b8f86b1758de2b69f306aedde6bf51d3fdd3d9235a2a1725dd790b27e5658f05f8d164a5593af WHIRLPOOL 9e19ba28bff7d44480653ffeb87a8ea9829359b6b43626248e7390a024a136a8f5a2ca2ef2cfd8cff404fcb30d73e1f453bc45a2b7af55f3412669510243de38
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlSmsigACgkQG9wOWsQutda28QP8D5Auq/FrGFPqUkP9sJXxylpk
-4ebfe3eJNGunEUFr4w7dvsJ3EQXbm5VJcJ57fK1MiNYvklumX+Gbay7GVMOrHIpc
-DCBX8ozTATTENxbu/Zg2ZiMvSo+SiBax4NVwiKY04yVaqMCSdAu5kM3N2Zgu/IA6
-5xMDWYzaSo4ibAm8+oM=
-=0XRg
+iQIcBAEBCAAGBQJU71tyAAoJEPGu1DbS6WIAdMAP/RCoXch1Dm8uIuaQMLsjz6ID
+QSAsaQdT4eY1CaRwO0IGPIcEIajVHR+tGO/2EHo7/YDfmzvraRmrdsLBO5ly6TPZ
+xHc4LJvWG4wgyPjWDuyev4anhs6CGRRkNvxzmiCggW95KNuEVAxe02U+yyvkiRo2
+NBqhhq6tyWVSMF72wfd8NyH9JLcsio7CnRldxLYQJLBAFJpjfipIN9tR2gv41IYh
+8hrMfrQ1JZcv6yHE6sJEdsCOUNbNi2fYcrAdILaF5JEWbgHOqOWzgN6i1FFZ3Zvs
+yF09w9KUewlYa9TKLwwiOeUoV1xpXcDpbcTG3pXK8yqFETdoaHBijQlbxWvoMvVD
+b4zTbmZZiVAK6dVSZkKsOhAcYS0aI0lg4F6VVl2EQA+Y+oL63PZbWGagEVBDab3M
+Re4RteU1wJp3CZSq8NQp0LE0aTkGcWVEsqW00heJBi4CouoQtMkfoJT+Ego8iSwO
+vHRtlb272ajOyWqqATXBabbdi8ZgjGeE+nrXYuNTImy6dm6mq86cijzo9W54jVhb
+aE6rd6EF6bnoxIQWJHyYKDnKBP8cCs0FpTgrK9eghymDqajAHY5PkHILv4TaXKkS
+UMChlx5JQiazEfKQORe8k+BxYemU1cQhB9jo1lZB4jYlC8j7HXfpQ0JYMJbptopN
+icna7jdPpwiVrt0ZxTFH
+=KZDh
 -----END PGP SIGNATURE-----
