@@ -1,4 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST arcconf_v1_2_20618.zip 11920300 SHA256 ce5fe8ad97065ec90844c9e7d3778036e22a013eb029db2d6bda3ff3024734e4 SHA512 e8415e929cd7a8c8bca33f0de29bdadf3595da911bc3c0984226e02e01e6f4e9c822363dd8aa093efd524eea19f0689784e0300403513a99ead14ac08c487efe WHIRLPOOL 95399b80233fc1b8eac6c98156ad4b5d3f9597fddb7f413b4498886f1aa96eb623195e84b7ba97c4f84e4e8e555847b1650dc0092b64fdcf43ed22fdc01b3d6b
+DIST arcconf_v1_7_21229.zip 11056748 SHA256 b9ec025ed6e7167551dc2a034b39999f5b43a3a6544e3e8989f75a89dd99c7b3 SHA512 66a56ea66b8011c1f8f431b25f95050e541311ee415a0d4bdee6ef6416ff499be41d275819694384f66e5a1401b467da82ab15ce7c3fe49e1e013370293cf63a WHIRLPOOL bd566063d986ca4558e79759c1cfa96fe5e8ba4f44f5bf7828c4840d9634db69f897619b75b7d39a0d2102b8abbe4ad565b89136145af128636c0a40e4c3ce71
 EBUILD arcconf-1.2.20618.ebuild 1568 SHA256 9ae733980e7a6b667551fce70768d09358839d5322eecfe10f3af2b187b5015b SHA512 e8d534e3e31f1df3e52e311f888c933c5788cd2c3e44865b9944126431f13bffd95c62837a216179dbcda5a755e9b28bec9e3089c158a05d55c523dd790aec77 WHIRLPOOL 6d91254424b95c83d5115c8e2f62d5c9dec58fe59a36c94462ae975a467026fa8ec71034c6d713e6874f6eda73672b3a7237255039af0fb38da2764d56d2b5e1
-MISC ChangeLog 357 SHA256 71c56f711d1d43b65d7bfe8eba079805357acfad1a8ef13517e6e543ba2f5353 SHA512 c2dbf68b6897a8d64aa021f0abef6f6e00723ecf4cb6ff20bd603615de8cd71758818fe5eac5295a6bf026d57a57c210afc582cec66bc4a444b5f35b170f03c3 WHIRLPOOL d1daac1e3668cff47e8629a900bd6ef05efc90406b2c7f6c1badfeb2a04ee056a5a09c0154d6849387dea59238c65b153430c4bbf9c09f520300cf944d6c7792
+EBUILD arcconf-1.7.21229.ebuild 1584 SHA256 584f1b2f8cd4639b9a154f795be8480947ebdf8a83e11ec8725a706c500cf292 SHA512 6bdba5a830d18c9830d721b31b132d7c5e9adc9f8beefe9808d81f6fef947bd6af7ae7bf1c9c04b8802c447b8d5de2bebda3174aefe92dd98714b63e604d2908 WHIRLPOOL a22f89dde0c5164b93fc407d335242d74bcf6942524f97eb63089bb8aae5aca62c90acaa5e92e08ccfe3296b3b03261aff5d279f351910468295e6555bf54c43
+MISC ChangeLog 501 SHA256 9f962b943782071660379b2853ccbbf06ae18a9eac5988e3766acd1bc57e8384 SHA512 ab322fc0ca6c660cad377c16256f4494d9d27ebebd1b3fb2b4796662c717110203a62d762a91e234a46049306e3f0ad99e12647cf0e14448198969f037471807 WHIRLPOOL 8360e06fbfbe27afdab7fd4eb87a45e33068e3285a7b61ce9e66709151869bcda0817a5cfa63a620be7c7a0894508eea04232a6b4bfd564bac450372ca61aadc
 MISC metadata.xml 236 SHA256 8db85d348f1fcca741457358302188e30b7b1c0524a9a55820b935d8bcac959e SHA512 8086fc7bc2140d0b7b96293ba80717a8dcb88b255cc3906b5ac1ec4b9c67a412d3a51ad03a19e3b700a0235d0622b525ef85289f616646d47c698b3b54157b7e WHIRLPOOL 080a90e854f29d29d005f164fba91fc9e05f362460cd8f825ecb7f16d893a1cce1f7e842bf561918a491d156c48c1d8e4a60b177ab28667c067ee379d626de68
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJ8BAEBCABmBQJU71v3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRCMjM3NDkyMkQ0OTFBMUIyMzgzNkZBMkUx
+QTVEMDIzOTc1QjA1ODNEAAoJEBpdAjl1sFg9frAP/3pMnW4Jf0RPqIfm0wsrUfd7
+YDGu5kkzyb5XK5EpmwaE0MV9pmkvw2a6WOq6w218ncg6yWUjH6247C4RbXVJQ8Uc
+0Uu/MAMStjzO4c7y78pUm2J0JtyrMfWCFaaXRSjl1bY4UrBtJ9MYaNnj2EyJl7Zh
+mc2omCK72if0xyFqIk3/yv/irbU3xNLJDMZz0kqtpWLK+KDQTTn+xJy3ToSLMy/C
+Cl5bLmEgUD83abfaZtSa4or1vtyDy7hmRJeEzP0iUTY5k0vBQG0FG7hhTeknDtDs
+LbK1UaPWkQQaD5ZspDQGWrYPo1yKPqn8+G/Gnfnrc9E2UHezhWCnqE4ZJP0eQObS
+yxeXrWC5YjNrLlVSEQCZTawGA7ryAqjhuja3+56P6Ehg/azhD64X0xYQd795luhc
+xa1PUU2nTv7/cHph2puRFl8doFwzue8DHyqtZMb/9Fo3qXYE4DS61BFpuNRkukcy
+ETJpx99qlFxFWfpi5JmxH/IgNZnSm+eE3R5gLBc6434AUSyMnqDnR8pYr9iJrZzX
+mpC+A1vxBpVve15G2T0cuiGPQ8UfYJkPExWt3uFW2R5rMTSFCyC/tXgGyDOzaMb3
+rYb7Hdhg7pgm16GTnlJmZ6MUZrTEDw/I80KbbhhACMkYDEDqRtNF5aIiKqGynsYd
+xQ0wEsNKXbTslT5vsz2j
+=EKJp
+-----END PGP SIGNATURE-----
