@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/xz-utils
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.93 2015/01/02 15:00:21 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/xz-utils/ChangeLog,v 1.94 2015/02/26 17:44:16 vapier Exp $
+
+*xz-utils-5.2.1 (26 Feb 2015)
+
+  26 Feb 2015; Mike Frysinger <vapier@gentoo.org> +xz-utils-5.2.1.ebuild:
+  Version bump.
 
   02 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> xz-utils-5.0.8.ebuild:
   ia64 stable wrt bug #533274
